# serde-partial-deserialization

./: Cargo.toml  README.md
src/: lib.rs  main.rs
