[package]
name        = "serde_partial_deserialization"
description = "An example of serde parital deserialization failing"
version     = "0.1.0"
authors     = ["Jacob Ouellet-Boudreault <joboudreault@dimonoff.com>"]
edition     = "2021"



[dependencies]
serde           = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5", default-features = false }
